--- a/app/src/main/res/layout/activity_operac_pagar.xml
+++ b/app/src/main/res/layout/activity_operac_pagar.xml
@@ -8,11 +8,11 @@
         android:id="@+id/tv_saldo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Su saldo es: { saldo }"
-        android:textSize="24sp"
+        android:textAlignment="center"
+        android:textSize="39sp"
+        android:textStyle="bold"
         android:layout_marginTop="10sp"
-        android:layout_marginLeft="5sp"
-        android:layout_marginRight="5sp"/>
+        android:layout_marginBottom="5sp"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -24,20 +24,20 @@
         android:layout_marginRight="5sp"/>
 
     <EditText
-        android:id="@+id/et_giro"
+        android:id="@+id/et_pago"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:hint="ej: 1000"
-        android:layout_marginBottom="20sp"
         android:layout_marginLeft="5sp"
-        android:layout_marginRight="5sp"/>
+        android:layout_marginRight="5sp"
+        android:layout_marginBottom="70sp"/>
 
     <Button
         android:id="@+id/bt_pagar"
         android:onClick="realizar_pago"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Girar"
+        android:text="Pagar"
         android:layout_marginLeft="20sp"
         android:layout_marginRight="20sp"/>
 
@@ -52,7 +52,7 @@
 
     <Button
         android:id="@+id/bt_volver"
-        android:onClick="volverDesdeGiro"
+        android:onClick="volverDesdePago"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Volver"
