--- a/app/src/main/res/layout/activity_operac_girar.xml
+++ b/app/src/main/res/layout/activity_operac_girar.xml
@@ -43,7 +43,7 @@
 
     <Button
         android:id="@+id/bt_historial"
-        android:onClick="crear"
+        android:onClick="verHistorialGirar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Ver cartola"
