ListView - Parte II

--- a/app/src/main/res/layout/activity_historial_depositos.xml
+++ b/app/src/main/res/layout/activity_historial_depositos.xml
@@ -3,6 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ListView
+        android:id="@+id/lv_hdepositos"
+        android:layout_width="match_parent"
+        android:layout_height="517dp" />
+
     <Button
         android:id="@+id/bt_volver"
         android:onClick="volverDesdeHistorialDeposito"
